4.39: 3/XX/2012 (svn rYYYY)
	* CORE: Deprecated @DatabaseField foreignColumnName, renamed to foreignFieldName. Thanks to Candlejack. Bug #3507094.
	* CORE: Changed dao.callBatchTasks() from throwing Exception to SQLException.  Thanks to JC.
	* JDBC: Added support for preparedStatement.setQueryTimeout(millis).  Thanks to mjomble. Feature #3502803.
	* ANDROID: Finally fixed the number of rows changed for insert/delete/update calls using SQLite CHANGES() pragma.
	* ANDROID: Decided to _not_ fix the columnName case sensitivity issue introduced in 4.37.  Thanks to Roman Zimmer.

4.38: 3/23/2012 (svn r2426)
	* ANDROID: Fixed bad ObjectCache bug deep in Android shutdown/startup logic. Thanks to Filipe Leandro. Bug #3510266.

4.37: 3/21/2012 (svn r2406)
	* CORE: Fixed blocking bug where object cache exceptions would be thrown.  Thanks to Filipe Leandro.  Bug #3509853.
	* CORE: Fixed bug where LocalLog was overwriting log data written to local file.  Thanks to mjomble.  Bug #3437823.
	* ANDROID: Fixed a bug with Android API lookup of column names with periods. Thanks to Sebastian Roth. Bug #3509386.

4.36: 3/19/2012 (svn r2389)
	* CORE: Added support for @DatabaseField(foreignColumnName="name") to map foreign to non-ID.  Thanks to Mathias Lin.
	* CORE: Added update() and refresh() to ForeignCollection which call through to the inner Dao.
	* CORE: Improved the custom data persister code so it can extend one of the types.  Added docs and example.
	* CORE: Added a Joda DateTime persister which uses reflection.
	* CORE: Increased synchronization around some code to be proactive about constructor reordering race-conditions.
	* CORE: Added updateAll(), refreshAll(), refreshCollection() for eager foreign collections.  Thanks to Chris Nevill.
	* CORE: Added logging of exceptions to the RuntimeExceptionDao.  Thanks to Kaan.
	* CORE: Revamped the Logger stuff to remove new Object[] that was happening on each Logger call. Bug #3509015.